# soldev

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/sample-solsign/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/sample-solsign/src/: index.css  main.jsx  output.css
app/sample-solsign/src/components/: CreateDoc.jsx  DocList.jsx  Loading.jsx  SignatureList.jsx
app/sample-solsign/src/funcs/: sendTxn.js
app/sample-solsign/src/icons/: key.jsx  upload.jsx  wallet.jsx
app/sample-solsign/src/layout/: main.jsx
app/sample-solsign/src/pages/: Manage.jsx  Signatures.jsx
app/solsign-sample/: package-lock.json  package.json
client/solsign/: config.ts  index.ts  sdk
client/solsign/idls/: solsign.json
client/solsign/instructions/: create_document.ts  sign.ts
client/solsign/state/: document_status.ts  get_document.ts  get_signature.ts  list_document_by_creator.ts  list_document_by_signer.ts  signature_status.ts
client/solsign/types/: solsign.ts
migrations/: custom.ts  deploy.ts
programs/fake-program/: Cargo.toml
programs/fake-program/src/: lib.rs
programs/m6_1/: Cargo.toml
programs/m6_1/src/: lib.rs
programs/rpg/: Cargo.toml
programs/rpg/src/: lib.rs
programs/soldev/: Cargo.toml
programs/soldev/src/: lib.rs
programs/solsign/: Cargo.toml
programs/solsign/src/: lib.rs
tests/: rpg.ts  soldev.ts  solsign.ts
tests/solsign/: creator_profile.test.ts  document.test.ts  setting.test.ts  signature.test.ts
tests/solsign/lib/: loadKeypairFromFile.ts  wallet2.json
(+18 files in other folders)
